--- a/register.html
+++ b/register.html
@@ -61,7 +61,7 @@
 
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
 						<span class="label-input100">Password</span>
-						<input class="input100" type="password" id="password" name="pass" placeholder="*************" required>
+						<input class="input100" type="password" id="password" name="pass" placeholder="************" required>
 						<span class="focus-input100"></span>
 					</div>
 
