--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
       </div>
       
       <script src="js/jquery-3.2.1.min.js"></script>
-      <script src="js/sparkle.js"></script>
       <script src="js/bootstrap.min.js"></script>
       <script src="js/signals.min.js"></script>
       <script src="js/hasher.min.js"></script>    
@@ -102,5 +101,6 @@
       <script src="js/bootbox.min.js"></script>
       <script src="js/templates/templates.min.js"></script>
       <script src="js/app.js"></script>
+      <!-- <script src="js/sparkle.js"></script> -->
    </body>
 </html>
