--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="#">Project name</a>
+               <a class="navbar-brand" href="#">SuperHero Application</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                <ul class="nav navbar-nav">
                   <li class="active"><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#home">Home</a></li>
                
                  <li id="test"></li>
-                  <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#contacts">Contacts</a></li>
                   <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#applications">Application</a></li>
                   <!-- <script>
                      var roles = "admin";
