--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                </ul>
                <ul class="nav navbar-nav navbar-right">   
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span id="login" style="color: yellow; font-weight: bold"></span> <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span id="roles" style="color: yellow; font-weight: bold"></span> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#profile">Profile</a></li>
                       <li><a href="#logout">Logout</a></li>
