--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
  
-
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
 
 
       <!-- Custom styles for this template -->
@@ -96,7 +99,7 @@
          <div class="well">
             <div class="row">
                <div class="col-md-12">   
-                  SUPERheRO SWAG TeAMZZZ 2019    
+                  SUPERheRO SWAG TeAMZZZ 2019   
                </div>
             </div>
          </div>
